@@ -7,6 +7,7 @@
 [greeter]
 webkit-theme = antergos
 debug_mode = false
+screensaver-timeout = 300
 
 #
 # [branding]
